add routes for match/edit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <md-sidenav #sidenav mode="over">
     <h2>PIZZA UND ROMME</h2>
     <br>
-    <a md-button (click)="sidenav.close()" routerLink="match-browser" routerLinkActive="active">Runde</a>
+    <a md-button (click)="sidenav.close()" routerLink="matches" routerLinkActive="active">Runde</a>
     <br>
     <a md-button (click)="sidenav.close()">Registrieren</a>
     <br>
