--- a/src/app/match/browser/match-browser.component.html
+++ b/src/app/match/browser/match-browser.component.html
@@ -3,6 +3,6 @@
     <!-- <match-display [match]="match"></match-display> -->
   </md-grid-tile>
 </md-grid-list>
-<button md-fab class="btn-floating" md-tooltip="Füge ein neues Match hinzu." tooltip-position="below">
+<button md-fab class="btn-floating" md-tooltip="Füge ein neues Match hinzu." i18n-md-tooltip tooltip-position="below" routerLink="edit">
     <md-icon>add</md-icon>
 </button>
