--- a/src/app/match/edit/match-edit.component.html
+++ b/src/app/match/edit/match-edit.component.html
@@ -1,3 +1,24 @@
-<p>
-  match-edit works!
-</p>
+<md-card class="toolbar-card">
+  <md-toolbar color="primary">New Match</md-toolbar>
+  <md-card-content>
+    <form (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <md-input [(ngModel)]="match.name" placeholder="Name" name="name" i18n-placeholder maxlenght="50" type="text">
+        </md-input>
+      </div>
+      <div class="form-group">
+        <Label>Startdatum</Label>
+        <input type="Date" name="startDate" value="2011-09-29">
+      </div>
+      <div class="form-group">
+        <Label>Enddatum</Label>
+        <input type="Date" name="endDate" value="2011-09-30">
+      </div>
+      <div class="form-group">
+        <label i18n="gamesPerMatch">Spiele pro Satz</label>
+        <md-slider min="1" max="50" tick-interval="auto"></md-slider>
+      </div>
+      <button md-button type="submit">Save</button>
+    </form>
+  </md-card-content>
+</md-card>
