--- a/src/app/match/browser/match-browser.component.html
+++ b/src/app/match/browser/match-browser.component.html
@@ -1,7 +1,6 @@
 <md-grid-list cols="2" gutterSize="4px" style="max-width: 600px; display: table-row-group">
   <md-grid-tile *ngFor="let match of matches" [style.background]="'transparent'">
-    <!-- <match-display [match]="match"></match-display> -->
-    <span>{{ match.name }}</span>
+    <snandr-match-display [match]="match"></snandr-match-display>
   </md-grid-tile>
 </md-grid-list>
 <button md-fab class="btn-floating" md-tooltip="Füge ein neues Match hinzu." i18n-md-tooltip tooltip-position="below" routerLink="edit">
