add user components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <br>
     <a md-button (click)="sidenav.close()" routerLink="matches" routerLinkActive="active">Runde</a>
     <br>
-    <a md-button (click)="sidenav.close()">Registrieren</a>
+    <a md-button (click)="sidenav.close()" routerLink="users/580d394db1b2fb33281966f4">Registrieren</a>
     <br>
   </md-sidenav>
   <md-toolbar>
