--- a/src/app/user/display/user-display.component.html
+++ b/src/app/user/display/user-display.component.html
@@ -1,3 +1,9 @@
-<p>
-  user-display works!
-</p>
+<md-card>
+  <md-card-title>{{ user.firstName }} {{ user.lastName }}</md-card-title>
+  <md-card-content>
+    <p>Username: {{ user.username }}</p>
+    <p>E-Mail: {{ user.email }}</p>
+    <p>City: {{ user.city }}</p>
+
+  </md-card-content>
+</md-card>
