change material theme

--- a/src/app/user/display/user-display.component.html
+++ b/src/app/user/display/user-display.component.html
@@ -1,9 +1,33 @@
 <md-card>
-  <md-card-title>{{ user.firstName }} {{ user.lastName }}</md-card-title>
   <md-card-content>
-    <p>Username: {{ user.username }}</p>
-    <p>E-Mail: {{ user.email }}</p>
-    <p>City: {{ user.city }}</p>
+    <md-card-title-group>
+      <md-card-title>{{ user.firstName }} {{ user.lastName }}</md-card-title>
+      <md-card-subtitle>{{ user.username }}</md-card-subtitle>
+      <img md-card-avatar [src]="user.profilePicture">
+    </md-card-title-group>
+    <md-list>
+      <md-list-item>
+        <md-icon md-list-icon>mail</md-icon>
+        <span md-line>{{ user.email }}</span>
+      </md-list-item>
+      <md-list-item>
+        <md-icon md-list-icon>location_on</md-icon>
+        <span md-line> {{ user.city }}</span>
+      </md-list-item>
+      <md-list-item>
+        <md-icon md-list-icon>people</md-icon>
+        <a md-line>{{ getFriendsCount() }} Freunde</a>
+      </md-list-item>
+    </md-list>
+
+
+    <md-list>
+      <md-list-item *ngFor="let friend of user.friends">
+        <img md-list-avatar src="assets/icons/persons/superman.svg">
+        <span md-line>Markus</span>
+      </md-list-item>
+    </md-list>
+
 
   </md-card-content>
 </md-card>
