--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/core/theming/prebuilt/purple-green.css';
+
+.btn-floating {
+  position: fixed;
+  right: 25px;
+  bottom: 40px;
+}
