--- a/src/app/user/display/user-display.component.html
+++ b/src/app/user/display/user-display.component.html
@@ -1,33 +1,23 @@
 <md-card>
   <md-card-content>
     <md-card-title-group>
-      <md-card-title>{{ user.firstName }} {{ user.lastName }}</md-card-title>
-      <md-card-subtitle>{{ user.username }}</md-card-subtitle>
-      <img class="userImage" [src]="user.profilePicture">
+      <md-card-title>{{ user?.firstName }} {{ user?.lastName }}</md-card-title>
+      <md-card-subtitle>{{ user?.username }}</md-card-subtitle>
+      <img class="userImage" [src]="user?.profilePicture">
     </md-card-title-group>
     <md-list>
       <md-list-item>
         <md-icon md-list-icon>mail</md-icon>
-        <span md-line>{{ user.email }}</span>
+        <span md-line>{{ user?.email }}</span>
       </md-list-item>
       <md-list-item>
         <md-icon md-list-icon>location_on</md-icon>
-        <span md-line> {{ user.city }}</span>
+        <span md-line> {{ user?.city }}</span>
       </md-list-item>
-      <md-list-item>
-        <md-icon md-list-icon>people</md-icon>
-        <a md-line>{{ getFriendsCount() }} Freunde</a>
-      </md-list-item>
+      <md-divider></md-divider>
     </md-list>
 
-
-    <md-list>
-      <md-list-item *ngFor="let friend of user.friends">
-        <img md-list-avatar src="http://localhost:3000/icons/persons/superman.svg">
-        <span md-line>Markus</span>
-      </md-list-item>
-    </md-list>
-
+    <snandr-friend-list [userIds]="user?.friends"></snandr-friend-list>
 
   </md-card-content>
 </md-card>
